buttons to all pages and colors

--- a/epi_index.html
+++ b/epi_index.html
@@ -9,6 +9,7 @@
   <body>
     <svg width="800" height="500"></svg>
     <script src="epi_anime.js"></script>
-
+    <a href="index.html" class="button" id="button_hist">Histogram</a>
+    <a href="pop_index.html" class="button" id="button_pop">Popularity</a>
   </body>
 </html>
