--- a/pop_index.html
+++ b/pop_index.html
@@ -9,6 +9,7 @@
   <body>
     <svg width="800" height="500"></svg>
     <script src="pop_anime.js"></script>
-
+    <a href="epi_index.html" class="button" id="button_epi">Episodes</a>
+    <a href="index.html" class="button" id="button_hist">Histogram</a>
   </body>
 </html>
