--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </p>
         
         <div id="scatterplots">
-            <a href="epi_index.html" class="button" id="button">Episodes</a>
-            <a href="pop_index.html" class="button" id="button">Popularity</a>
+            <a href="epi_index.html" class="button" id="button_epi">Episodes</a>
+            <a href="pop_index.html" class="button" id="button_pop">Popularity</a>
         </div>
     </div>
 
